Feat: タイムラインでのアイコンと名前とハンドル表示

--- a/static/register.html
+++ b/static/register.html
@@ -122,6 +122,7 @@
                 console.error('Error:', error);
                 alert('エラーが発生しました。もう一度お試しください。');
             });
+            return false;
         });
     </script>
 </body>
