--- a/static/login.html
+++ b/static/login.html
@@ -92,7 +92,7 @@
             })
             .then(data => {
                 document.cookie = `token=${data.token}; path=/`;
-                window.location.href = 'timeline.html';
+                window.location.href = 'timeline';
             })
             .catch(error => {
                 console.error('Error:', error);
