--- a/static/post.html
+++ b/static/post.html
@@ -85,7 +85,7 @@
 
             const content = document.getElementById('content').value;
 
-            const response = await fetch('/api/letter/create.py', {
+            const response = await fetch('/api/letter/create', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
