Fix: パス間違えた

--- a/static/post.html
+++ b/static/post.html
@@ -96,7 +96,7 @@
 
             if (response.ok) {
                 alert('投稿できました');
-                window.location.href = 'timeline.html';
+                window.location.href = 'timeline';
             } else {
                 alert('投稿に失敗しました');
             }
