Revert "Fix: 不要"
This reverts commit e2608d233d27529f84edb38c772c24f9992d5e24.

--- a/static/timeline.html
+++ b/static/timeline.html
@@ -70,6 +70,7 @@
     <div class="container" id="timeline-container">
         <h2>タイムライン</h2>
         <div id="posts"></div>
+        <button class="load-more" id="load-more">もっと見る</button>
     </div>
     <script>
         // クッキーからトークンを取得
