レターの表示順が逆になっていたので応急処置

--- a/static/timeline.html
+++ b/static/timeline.html
@@ -191,6 +191,7 @@
             fetch(`/api/timeline/local${query}`)
                 .then(response => response.json())
                 .then(data => {
+                    console.log(data);
                     const postsContainer = document.getElementById('posts');
                     if (data.letters.length > 0) {
                         data.letters.forEach(letter => {
