timeline.html を更新

--- a/static/timeline.html
+++ b/static/timeline.html
@@ -241,7 +241,7 @@
                                             <img src="${letter.user.icon_url}" class="user-icon">
                                             <div>
                                                 <div class="user-displayname">${letter.user.display_name ?? letter.user.handle}</div>
-                                                <div class="user-handle">${letter.user.handle}</div>
+                                                <div class="user-handle">@${letter.user.handle}</div>
                                             </div>
                                         </div>
                                     </h3>
