--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -75,9 +75,9 @@
             right: 20px;
             background-color: #28a745;
             color: white;
-            width: 60px; /* 同じ幅と高さに設定 */
-            height: 60px; /* 同じ幅と高さに設定 */
-            border-radius: 50%; /* 完全な丸にする */
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
             border: none;
             font-size: 24px;
             cursor: pointer;
