--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -287,7 +287,7 @@
 
         function delete_reaction(letter_id, reaction){
             fetch(`/api/letter/${letter_id}/reaction/delete`, {
-                method: 'POST',
+                method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json',
                     'Authorization': `Bearer ${token}`
