--- a/pages/index.html
+++ b/pages/index.html
@@ -8,5 +8,6 @@
     <p>Nyantter トップページ(仮)</p>
     <p><a href="/register">登録</p>
     <p><a href="/login">ログイン</p>
+    <p><a href="/timeline">タイムライン</p>
 </body>
 </html>
