--- a/pages/index.html
+++ b/pages/index.html
@@ -1,13 +1,83 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nyantter</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #2c2f33;
+            color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+            background-color: #23272a;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .header {
+            margin-bottom: 20px;
+        }
+
+        .logo {
+            font-size: 2em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .description {
+            font-size: 1em;
+            color: #bbbbbb;
+        }
+
+        .buttons {
+            margin-top: 20px;
+        }
+
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 10px 0;
+            margin: 10px 0;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .btn.register {
+            background-color: #7289da;
+            color: #ffffff;
+        }
+
+        .btn.login {
+            background-color: #99aab5;
+            color: #ffffff;
+        }
+
+        .btn:hover {
+            background-color: #5a6fb2;
+        }
+    </style>
 </head>
 <body>
-    <p>Nyantter トップページ(仮)</p>
-    <p><a href="/register">登録</p>
-    <p><a href="/login">ログイン</p>
-    <p><a href="/timeline">タイムライン</p>
+    <div class="container">
+        <div class="header">
+            <div class="logo">Nyantter</div>
+            <div class="description">つぶやきで繋がるSNS</div>
+        </div>
+        <div class="buttons">
+            <a href="/register" class="btn register">サーバーに登録する</a>
+            <a href="/login" class="btn login">ログイン</a>
+        </div>
+    </div>
 </body>
 </html>
