--- a/pages/index.html
+++ b/pages/index.html
@@ -77,6 +77,7 @@
         <div class="buttons">
             <a href="/register" class="btn register">サーバーに登録する</a>
             <a href="/login" class="btn login">ログイン</a>
+            <a href="/timeline" class="btn login">タイムライン</a>
         </div>
     </div>
 </body>
