--- a/pages/register.html
+++ b/pages/register.html
@@ -63,9 +63,9 @@
                 <span>有効なメールアドレスを入力してください。</span>
             </div>
             <div class="form-group">
-                <label for="handle">ユーザー名:</label>
+                <label for="handle">ユーザーID:</label>
                 <input type="text" id="handle" name="handle" pattern="[\a-zA-Z0-9_]" required>
-                <span>ユーザー名を入力してください。</span>
+                <span>ユーザーIDを入力してください。</span>
             </div>
             <div class="form-group">
                 <label for="password">パスワード:</label>
