--- a/pages/login.html
+++ b/pages/login.html
@@ -54,9 +54,9 @@
         <h2>ログイン</h2>
         <form id="login-form">
             <div class="form-group">
-                <label for="handle">ユーザー名:</label>
+                <label for="handle">ユーザーID:</label>
                 <input type="text" id="handle" name="handle" required>
-                <span>ユーザー名を入力してください。</span>
+                <span>ユーザーIDを入力してください。</span>
             </div>
             <div class="form-group">
                 <label for="password">パスワード:</label>
