Fix: nodeInfo Fix: loginとregisterのGUIのコンテナの大きさが値を入れる前と後で異なっていた問題を修正 Fix: 軽微なGUIの修正
lettersテーブルにdomainが追加されたので手動で追加してください〜！！

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
             text-align: center;
             background-color: #23272a;
             border-radius: 10px;
-            padding: 20px;
+            padding: 5%;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
