--- a/pages/user.html
+++ b/pages/user.html
@@ -260,7 +260,7 @@
 
                                 let infostr = "";
 
-                                user.info.forEach((info) => {
+                                user.info?.forEach((info) => {
                                     infostr += `
                                         <div class="card">
                                             <span>${info.name}: </span><span>${info.value}</span>
