--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -370,8 +370,81 @@
             // 最初の投稿の読み込み
             fetchNewPosts();
 
-            // 3秒ごとに新しい投稿をチェック
-            setInterval(fetchNewPosts, 3000);
+            let connection = new WebSocket(`//${location.host}/ws`);
+
+            connection.onmessage = function(event) {
+                console.log("event.data", event.data);
+                data = JSON.parse(event.data);
+                console.log("data", data);
+                if (data.type == "letter"){
+                    letter = data.data;
+                    console.log(letter);
+                    const postsContainer = document.getElementById('posts');
+                    if (!displayedPosts.has(letter.id)) {
+                        let reactionPanel = "";
+                        let reactionEmoji = {};
+
+                        letter.reactions.forEach(reaction => {
+                            if (!reactionEmoji.hasOwnProperty(reaction.reaction)) {
+                                reactionEmoji[reaction.reaction] = {
+                                    data: reaction.reaction_data,
+                                    name: reaction.reaction,
+                                    count: 0
+                                };
+                            }
+                            reactionEmoji[reaction.reaction].count += 1;
+                        });
+
+                        if (Object.keys(reactionEmoji).length > 0) {
+                            reactionPanel = '<div class="card-reactions">';
+                            Object.values(reactionEmoji).forEach(reaction_data => {
+                                if (reaction_data.data.type == "custom") {
+                                    reactionPanel += `<button title="${reaction_data.name}" class="reaction-btn" data-letter-id="${letter.id}" data-reaction="${reaction_data.name}"><img src="${reaction_data.data.image_url}" alt="${reaction_data.data.id}" class="reaction"></img> ${reaction_data.count}</button>`;
+                                } else {
+                                    reactionPanel += `<button title="${reaction_data.name}" class="reaction-btn" data-letter-id="${letter.id}" data-reaction="${reaction_data.name}">${reaction_data.data.emoji} ${reaction_data.count}</button>`;
+                                }
+                            });
+                            reactionPanel += '</div>';
+                        }
+
+                        // Replace newline characters with <br> tags for proper display
+                        letter.content = letter.content.split('\r\n').join('<br>').split('\r').join('<br>').split('\n').join('<br>');
+
+                        // Check for URLs in the content and fetch OGP data
+                        const regex = /(https?:\/\/[^\s]+)/g;
+                        const matches = letter.content?.match(regex);
+
+                        if (matches) {
+                            matches.forEach(url => {
+                                letter.content = letter.content.replace(url, `<a href="${url}" target="_blank">${url}</a>`);
+                            });
+                        }
+
+                        // Construct the post card HTML
+                        const card = document.createElement('div');
+                        card.className = 'card';
+                        card.setAttribute('data-letterID', letter.id);
+                        card.innerHTML = `
+                            <h3>
+                                <div style="display: flex;" onclick="window.location.href = '/@${letter.user.handle}'">
+                                    <img src="${letter.user.icon_url ?? "/static/images/default-icon.png"}" class="user-icon">
+                                    <div>
+                                        <div class="user-displayname">${letter.user.display_name ?? letter.user.handle}</div>
+                                        <div class="user-handle">@${letter.user.handle}</div>
+                                    </div>
+                                </div>
+                            </h3>
+                            <div class="card-content" onclick="window.location.href = '/@${letter.user.handle}/letter/${letter.id}'">
+                                <p>${letter.content}</p>
+                                <span class="created-at">${timeAgo(letter.created_at)}</span>
+                                ${reactionPanel}
+                            </div>
+                        `;
+                        postsContainer.prepend(card);
+                        displayedPosts.add(letter.id);
+                    }
+                }
+            };
 
             // 投稿フォームの送信
             const postForm = document.getElementById('post-form');
